fix(docs): Update GitHub links to point to CherryRum/smkit

--- a/docs/GMT-0009-快速参考.md
+++ b/docs/GMT-0009-快速参考.md
@@ -410,9 +410,9 @@ npm run demo
 
 ## 联系和支持
 
-- 🐛 报告问题: https://github.com/linyuliu/smkit/issues
+- 🐛 报告问题: https://github.com/CherryRum/smkit/issues
 - 📦 NPM 包: https://www.npmjs.com/package/smkit
-- 📖 完整文档: https://github.com/linyuliu/smkit
+- 📖 完整文档: https://github.com/CherryRum/smkit
 
 ---
 
