docs: 统一更名为 GMKitX 并完善文档与示例
- 将所有涉及 GMKit 的文档标题和内容统一更名为 GMKitX
- 补充国密常见坑点说明，提升用户使用注意力
- 丰富架构文档，新增 ZUC 和 SHA 模块介绍及详细目录结构
- 更新示例代码，修正函数名及参数，提升 API 一致性
- 完善 GM/T 0009 标准合规性文档，调整版本号、术语和示例代码
- 统一标准文档中 GM/T 0009-2023 的表述和推荐配置示例
- 调整导入指南示例中的包名和用法，确保一致性
- 优化实现总结，突出打包、依赖、测试与兼容性说明
- 修正获取哈希输出格式参数名称，明确字节数组转换示例
- 统一 README、示例及注释中的版本号至 v0.9.2，提升文档准确性

--- a/docs/standards/GMT-0009-快速参考.md
+++ b/docs/standards/GMT-0009-快速参考.md
@@ -1,5 +1,5 @@
 ---
-title: GMT-0009 快速参考
+title: GM/T 0009 快速参考
 icon: book
 order: 2
 author: mumu
@@ -8,20 +8,20 @@ category:
   - 标准与合规
   - 快速参考
 tag:
-  - GMT-0009
+  - GM/T-0009
   - 参考
   - 标准
 ---
 
-# GMT 0009-2023 快速参考指南
+# GM/T 0009-2023 快速参考指南
 
-本文档提供 GMT 0009-2023 标准的快速参考和常用代码示例。
+本文档提供 GM/T 0009-2023 标准的快速参考和常用代码示例。
 
 ## 标准对比速查表
 
-| 特性 | GMT 0009-2012 | GMT 0009-2023 | GMKit 默认值 |
+| 特性 | GM/T 0009-2012 | GM/T 0009-2023 | GMKitX 默认值 |
 |------|---------------|---------------|-------------|
-| 默认用户 ID | `'1234567812345678'` | `''`（空字符串） | `'1234567812345678'` ⚠️ |
+| 用户 ID（推荐值） | `'1234567812345678'` | `''`（空字符串） | `'1234567812345678'` ⚠️ |
 | 密文模式 | 未明确 | C1C3C2（推荐） | C1C3C2 ✅ |
 | 公钥格式 | 未明确 | 非压缩（推荐） | 非压缩 ✅ |
 | 椭圆曲线参数 | GM/T 0003-2012 | 相同 | 相同 ✅ |
@@ -58,7 +58,7 @@ const encrypted = sm2Encrypt(keyPair.publicKey, 'Hello, World!');
 const decrypted = sm2Decrypt(keyPair.privateKey, encrypted);
 ```
 
-### GMT 0009-2023 标准模式
+### GM/T 0009-2023 标准模式
 
 ```typescript
 import { generateKeyPair, sign, verify, sm2Encrypt, sm2Decrypt, SM2CipherMode } from 'gmkitx';
@@ -85,16 +85,16 @@ const decrypted = sm2Decrypt(keyPair.privateKey, encrypted, SM2CipherMode.C1C3C2
 
 ## 常用场景
 
-### 场景 1：新项目（完全符合 GMT 0009-2023）
+### 场景 1：新项目（完全符合 GM/T 0009-2023）
 
 ```typescript
 import { generateKeyPair, sign, verify, sm2Encrypt, sm2Decrypt, SM2CipherMode } from 'gmkitx';
 
 // 全局配置
 const CONFIG = {
-  userId: '',                          // GMT 0009-2023 推荐
-  cipherMode: SM2CipherMode.C1C3C2,   // GMT 0009-2023 推荐
-  compressed: false                    // GMT 0009-2023 推荐
+  userId: '',                          // GM/T 0009-2023 推荐
+  cipherMode: SM2CipherMode.C1C3C2,   // GM/T 0009-2023 推荐
+  compressed: false                    // GM/T 0009-2023 推荐
 };
 
 // 生成密钥对
@@ -169,7 +169,7 @@ function verifyByType(publicKey: string, data: string, signature: string, isLega
 ```typescript
 import { sign, verify, sm2Encrypt, sm2Decrypt, SM2CipherMode } from 'gmkitx';
 
-// 假设外部系统使用 GMT 0009-2023 标准
+// 假设外部系统使用 GM/T 0009-2023 标准
 const EXTERNAL_SYSTEM_CONFIG = {
   userId: '',
   cipherMode: SM2CipherMode.C1C3C2,
@@ -206,7 +206,7 @@ function decryptFromExternal(privateKey: string, encrypted: string): string {
 
 ```
 是否是新项目？
-├─ 是 → 使用空字符串 '' (GMT 0009-2023 推荐)
+├─ 是 → 使用空字符串 '' (GM/T 0009-2023 推荐)
 │
 └─ 否 → 是否需要与外部系统互操作？
     ├─ 是 → 使用外部系统约定的 userId
@@ -220,7 +220,7 @@ function decryptFromExternal(privateKey: string, encrypted: string): string {
 是否需要与特定系统互操作？
 ├─ 是 → 使用对方系统的密文模式
 │
-└─ 否 → 使用 C1C3C2（GMT 0009-2023 推荐，也是 GMKit 默认值）
+└─ 否 → 使用 C1C3C2（GM/T 0009-2023 推荐，也是 GMKitX 默认值）
 ```
 
 ### 我应该使用哪种公钥格式？
@@ -230,13 +230,13 @@ function decryptFromExternal(privateKey: string, encrypted: string): string {
 ├─ 是 → 使用压缩格式（节省约 49% 空间）
 │      const keyPair = generateKeyPair(true);
 │
-└─ 否 → 使用非压缩格式（GMT 0009-2023 推荐，性能更优）
+└─ 否 → 使用非压缩格式（GM/T 0009-2023 推荐，性能更优）
        const keyPair = generateKeyPair(); // 默认 false
 ```
 
 ## 性能对比
 
-| 操作 | 默认模式 | GMT 0009-2023 模式 | 性能差异 |
+| 操作 | 默认模式 | GM/T 0009-2023 模式 | 性能差异 |
 |------|---------|-------------------|---------|
 | 签名 | 1.20ms | 1.18ms | +1.7% 快 ✅ |
 | 验签（非压缩） | 2.40ms | 2.40ms | 无差异 |
@@ -287,6 +287,18 @@ const compressedKey = generateKeyPair(true).publicKey;
 const uncompressedKey = decompressPublicKey(compressedKey); // 130 字符
 ```
 
+### 错误 4：签名格式不一致
+
+```typescript
+// ❌ 错误：签名为 DER，验签按 Raw 处理
+const sig = sign(privateKey, data, { der: true });
+const ok = verify(publicKey, data, sig, { der: false }); // 可能失败
+
+// ✅ 正确：签名与验签使用相同格式
+const sig2 = sign(privateKey, data, { der: true });
+const ok2 = verify(publicKey, data, sig2, { der: true });
+```
+
 ## 测试代码
 
 ### 验证标准符合性的测试
@@ -294,9 +306,9 @@ const uncompressedKey = decompressPublicKey(compressedKey); // 130 字符
 ```typescript
 import { generateKeyPair, sign, verify, sm2Encrypt, sm2Decrypt, SM2CipherMode } from 'gmkitx';
 
-// 测试 GMT 0009-2023 标准模式
+// 测试 GM/T 0009-2023 标准模式
 function testGMT20092023() {
-  console.log('测试 GMT 0009-2023 标准模式...');
+  console.log('测试 GM/T 0009-2023 标准模式...');
   
   // 1. 生成密钥对（非压缩格式）
   const keyPair = generateKeyPair();
@@ -304,7 +316,7 @@ function testGMT20092023() {
   console.log('  公钥长度:', keyPair.publicKey.length); // 应该是 130（非压缩）
   
   // 2. 签名验签（空字符串 userId）
-  const message = 'Hello, GMT 0009-2023!';
+  const message = 'Hello, GM/T 0009-2023!';
   const signature = sign(keyPair.privateKey, message, { userId: '' });
   const isValid = verify(keyPair.publicKey, message, signature, { userId: '' });
   console.log('✓ 签名验签:', isValid ? '成功' : '失败');
@@ -332,7 +344,7 @@ function testBackwardCompatibility() {
   const keyPair = generateKeyPair();
   const message = 'Test message';
   
-  // 使用默认值（GMT 0009-2012 风格）
+  // 使用默认值（GM/T 0009-2012 风格）
   const signature = sign(keyPair.privateKey, message);
   const isValid = verify(keyPair.publicKey, message, signature);
   
@@ -398,7 +410,7 @@ console.log('密文首字节:', firstByte);
 
 ## 最佳实践总结
 
-1. ✅ **新项目**：使用 GMT 0009-2023 标准（userId: '', C1C3C2, 非压缩）
+1. ✅ **新项目**：使用 GM/T 0009-2023 标准（userId: '', C1C3C2, 非压缩）
 2. ✅ **现有项目**：无需修改，继续使用默认值
 3. ✅ **互操作**：明确约定参数，进行充分测试
 4. ✅ **性能优先**：使用非压缩公钥格式
@@ -420,17 +432,17 @@ npm test
 npm run build
 
 # 查看演示
-npm run demo
+npm run demo:vue
 ```
 
 ## 联系和支持
 
 - 🐛 报告问题: https://github.com/CherryRum/gmkit/issues
-- 📦 NPM 包: https://www.npmjs.com/package/GMKit
+- 📦 NPM 包: https://www.npmjs.com/package/gmkitx
 - 📖 完整文档: https://github.com/CherryRum/gmkit
 
 ---
 
 **最后更新**: 2025年10月  
-**版本**: v0.9.1
+**版本**: v0.9.2
 **许可证**: Apache-2.0
